# Lease-Intelligence-Crew

./: .env.example  .gitignore  INTERVIEW_QA.md  LEARNING_NOTES.md  README.md  app.py  checkpoints.sqlite-shm  checkpoints.sqlite-wal  pyproject.toml  requirements.txt
lease_crew/: __init__.py  abstraction.py  agents.py  cli.py  config.py  graph.py  ingest.py  projection.py  retrieval.py  state.py  tools.py
mcp_server/: client_demo.py  server.py
scripts/: hello_provider.py  make_sample_leases.py
scripts/learn/: 01_prompt_templates.py  02_tools_and_binding.py  03_structured_output.py  04_hand_built_agent.py  05_prebuilt_agent.py  06_human_approval.py  07_sqlite_memory.py  08_trimming.py
